assets/src/css/admin.css
h1.ka-logo,
.ka-logo {
  line-height: 32px;
}
.ka-logo::before {
  content: "";
  display: block;
  width: 32px;
  height: 32px;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='64' height='64' data-name='Layer 1'%3E%3Ccircle shape-rendering='geometricPrecision' cx='32' cy='32' r='32' style='display:inline;fill:%23b60205;fill-opacity:1;stroke-width:1.01241'/%3E%3Cpath d='M48.42 20.641a.6.6 0 0 0-.66.15L31.984 37.736l-7.36-7.36a.6.6 0 0 0-.848 0l-8.4 8.4a.6.6 0 0 0-.176.424v3.6a.6.6 0 0 0 .6.6h32.4a.6.6 0 0 0 .6-.6V21.2a.6.6 0 0 0-.38-.559z' style='fill:%23fff;fill-opacity:1;stroke-width:.6'/%3E%3Cpath d='M48.42 20.641a.6.6 0 0 0-.66.15L31.984 37.736l5.664 5.664H48.2a.6.6 0 0 0 .6-.6V21.2a.6.6 0 0 0-.38-.559z' style='fill:%23fff;fill-opacity:1;stroke-width:.6'/%3E%3C/svg%3E%0A");
  background-size: contain;
  margin-right: 18px;
  float: left;
  visibility: visible;
}
.ka-admin-nav {
	float: right;
	line-height: 34px;
}
.ka-admin-container {
  max-width: 620px;
  font-size: 14px;
}
.ka-admin-nav--link {
	display: inline-block;
	text-decoration: none;
	margin: 0 6px;
}
.ka-admin-nav--link.current {
	color: black;
}
.ka-admin-nav--link.last {
	margin-right: 0;
}
.ka-margin-s {
	margin: 12px 0;
}
.ka-margin-m {
	margin: 24px 0;
}
.ka-margin-l {
	margin: 48px 0;
}
.ka-right {
	float: right;
}
.ka-settings--label {
	display: block;
	font-weight: bold;
	margin: 0 0 4px 0;
  padding: 0;
}
.ka-setings--cb-label {
	margin-right: 12px;
}
.ka-admin-container .description {
  font-size: 14px;
}


/** Chart */
.ka-chart {
	position: relative;
	overflow: visible;
	min-height: 244px;
}
.ka-chart--tooltip {
	position: absolute;
	z-index: 9991; /* above wp admin menu */
}
.ka-chart--tooltip-box {
	background: rgba(46, 54, 63, 0.96);
	box-shadow: 2px 2px 12px 0 rgba(0,0,0,0.5);
	border-radius: 4px;
	color: #EEE;
}
.ka-chart--tooltip-heading {
	font-weight: 600;
	padding: 12px;
	line-height: 1;
}
.ka-chart--tooltip-content {
	padding: 6px 12px;
	width: 50%;
	display: block;
	flex: 1;
}
.ka-chart--tooltip-content.ka--pageviews,
.ka-chart--tooltip-content.ka--visitors {
	border-top: 3px solid transparent;
}
.ka-chart--tooltip-amount {
	color: #FFF;
	font-weight: bold;
}
.ka-chart--tooltip-arrow {
	width: 0;
	height: 0;
	margin-left: auto;
	margin-right: auto;
	/* css trick to create a downward pointing triangle */
	border-left: 6px solid transparent;
	border-right: 6px solid transparent;
	border-top: 6px solid rgba(46, 54, 63, 0.96);
}

.ka--pageviews {
	border-top-color: #e14d43 !important;
	fill: #e14d43;
}
.ka--visitors {
	border-top-color: #b43d35 !important;
	fill: #b43d35;
}

/** Dashboard */
.dashboard_page_koko-analytics {
	overflow-x: hidden
}
.ka-dashboard-components {
	display: grid;
	grid-gap: 12px;
	grid-template-columns: repeat(6, 1fr);
}

/** Topx components */
.ka-topx {
	grid-column: span 6;

}
@media (min-width: 840px) {
	.ka-topx {
		grid-column: span 3;
	}
}
.ka-topx--row {
	display: grid;
	grid-gap: 12px;
	grid-template-columns: min-content 8fr 2fr 2fr;
	border-top: 1px dashed #eee;
	padding: 6px 12px;
	text-align: left
}
.ka-topx--placeholder {
	padding: 6px 12px;
}
.ka-topx--head > div:nth-child(5),
.ka-topx--row > div:nth-child(5) {
	display: none;
}
.with-4th-col .ka-topx--head > div:nth-child(5),
.with-4th-col .ka-topx--row > div:nth-child(5) {
	display: block;
}
.with-4th-col .ka-topx--row {
	grid-template-columns: min-content 9fr 1fr 1fr 1fr;
}
.ka-topx--head {
	font-weight: bold;
	font-size: 1.1em;
	padding: 6px 12px;
	border: 0
}
.ka-topx--rank {
	color: #757575;
	font-size: .9em
}
.ka-topx--amount {
	text-align: right
}
.ka-topx--col,
.ka-topx--url {
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap
}

/* Pagination component */
.ka-pagination {
	color: #757575;
	cursor: pointer;
	font-weight: normal;
	border-top: 1px dashed #eee;
}
.ka-pagination--prev,
.ka-pagination--next {
	padding: 6px 12px;
  line-height: 1;
  height: 20px;
}
.ka-pagination--prev:before,
.ka-pagination--next:after {
	line-height: 1;
  height: 20px;
  font-size: 12px;
	vertical-align: middle;
  display: inline-block;
}
.ka-pagination--prev:before {
	content: "◀";
	margin-right: 6px;
}
.ka-pagination--next:after {
	content: "▶";
	margin-left: 6px;
}
.ka-pagination--next {
	float: right;
}
.ka-pagination--prev.disabled,
.ka-pagination--next.disabled {
	opacity: .4
}
.ka-pagination--prev.disabled:hover,
.ka-pagination--prev.disabled:focus,
.ka-pagination--next.disabled:hover,
.ka-pagination--next.disabled:focus {
	cursor: initial
}

/** Totals Component */
.ka-totals {
	background: #2e363f;
	color: white;
	padding: 24px;
	margin: 12px 0;
	display: flex;
	flex-flow: row wrap;
	gap: 48px;
	border-radius: 6px;
	width: 100%;
	box-sizing: border-box;
}
.ka-totals--label {
	color: #EEE;
	margin-bottom: 6px;
	font-size: 14px;
}
.ka-totals--amount {
	display: block;
	line-height: 48px;
	font-size: 48px;
	font-weight: 500;
	letter-spacing: -1px;
	margin-bottom: 6px;
	min-width: 160px;
}
.ka-totals--change {
	font-size: 16px;
	margin-left: 6px;
	font-weight: normal;
	vertical-align: top;
	letter-spacing: normal;
	color: #aaa;
}
.ka-totals--change.up {
	color: limegreen;
}
.ka-totals--change.down {
	color: #fb7272;
}
.ka-totals--subtext {
	color: #DDD;
}

/** Datepicker component */
.ka-datepicker--label {
	cursor: pointer;
	padding: 6px;
	border: 1px solid #DDD;
	border-radius: 6px;
	display: inline-block;
	background: white;
	line-height: 20px;
}
.ka-datepicker--label:before {
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect x='0' fill='none' width='20' height='20'/%3E%3Cg%3E%3Cpath d='M15 4h3v15H2V4h3V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1h4V3c0-.41.15-.76.44-1.06.29-.29.65-.44 1.06-.44s.77.15 1.06.44c.29.3.44.65.44 1.06v1zM6 3v2.5c0 .14.05.26.15.36.09.09.21.14.35.14s.26-.05.35-.14c.1-.1.15-.22.15-.36V3c0-.14-.05-.26-.15-.35-.09-.1-.21-.15-.35-.15s-.26.05-.35.15c-.1.09-.15.21-.15.35zm7 0v2.5c0 .14.05.26.14.36.1.09.22.14.36.14s.26-.05.36-.14c.09-.1.14-.22.14-.36V3c0-.14-.05-.26-.14-.35-.1-.1-.22-.15-.36-.15s-.26.05-.36.15c-.09.09-.14.21-.14.35zm4 15V8H3v10h14zM7 9v2H5V9h2zm2 0h2v2H9V9zm4 2V9h2v2h-2zm-6 1v2H5v-2h2zm2 0h2v2H9v-2zm4 2v-2h2v2h-2zm-6 1v2H5v-2h2zm4 2H9v-2h2v2zm4 0h-2v-2h2v2z'/%3E%3C/g%3E%3C/svg%3E");
	content: "";
	display: inline-block;
	line-height: 1;
	speak: never;
	width: 20px;
	height: 20px;
	vertical-align: top;
	margin-right: 4px;
}
.ka-datepicker--dropdown {
	background: white;
	width: auto;
	z-index: 20;
	border-radius: 6px;
	position: absolute;
	margin-top: 6px;
	box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.5);
}
.ka-datepicker--quicknav {
	background: #2e363f;
	border-top-left-radius: 6px;
	border-top-right-radius: 6px;
	color: white;
	text-align: center;
	padding: 12px;
	font-weight: bold;
	font-size: 1.1em;
}
.ka-datepicker--quicknav-prev,
.ka-datepicker--quicknav-next {
	color: white;
  cursor: pointer;
  height: 20px;
  line-height: 1;
  vertical-align: middle;
}
.ka-datepicker--quicknav-prev:before,
.ka-datepicker--quicknav-next:after {
  line-height: 1;
  height: 20px;
  font-size: 12px;
  vertical-align: middle;
  display: inline-block;
}
.ka-datepicker--quicknav-prev:before {
  content: "◀";
  margin-right: 12px;
}
.ka-datepicker--quicknav-next:after {
  content: "▶";
  margin-left: 12px;
}
.ka-datepicker--dropdown-content {
	padding: 12px;
}
.ka-datepicker--dropdown-content label {
	font-weight: bold;
	font-size: 1em;
	display: block;
}

/* General styles / Utility classes */
#koko-analytics-dashboard-widget-mount {
	text-align: center;
}
.ka-box {
	background: #fff;
	border-radius: 6px;
	border: 1px solid #ddd;
}
.ka-box:empty {
	display: none;
}
.ka-fade {
	animation: koko-fadein .4s
}

@keyframes koko-fadein {
	from {
		opacity: 0
	}
	to {
		opacity: 1
	}
}

